tests/error/struct/struct_same_id.mml
type d = {a : int; a : int ;}

()
